--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.23.2"
+      - name: Install dependencies
+        run: go get .
       - name: Build
         run: go build -v ./...
       - name: Test with the Go CLI
