--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,9 +11,10 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.23.2"
-      - name: Install dependencies
-        run: go get .
       - name: Build
         run: go build -v ./...
+      - name: Get dependencies
+        run: |
+          go mod download
       - name: Test with the Go CLI
         run: go test -v ./util/... ./internal/scraper/reddit/... ./internal/consumer/...
